--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+  "name": "softeni-pick",
+  "version": "0.1.0",
+  "private": true,
   "env": {
     "browser": true,
     "es2021": true
@@ -41,7 +44,34 @@
     ],
     "prettier/prettier": "error"
   },
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "generate-sitemap": "node scripts/generate-sitemap.js",
+    "postbuild": "next-sitemap",
+    "lint": "eslint --fix ."
+  },
   "dependencies": {
-    "next": "15.3.1"
+    "microcms-js-sdk": "^3.2.0",
+    "next": "15.3.1",
+    "next-sitemap": "^4.2.3",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
+  },
+  "devDependencies": {
+    "@eslint/eslintrc": "^3",
+    "@tailwindcss/postcss": "^4",
+    "@types/node": "^20",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "eslint": "^9.26.0",
+    "eslint-config-next": "15.3.1",
+    "eslint-config-prettier": "^10.1.2",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-prettier": "^5.4.0",
+    "prettier": "^3.5.3",
+    "tailwindcss": "^4",
+    "typescript": "^5"
   }
 }
