--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,8 @@
     "jsx": "preserve",
     "incremental": true,
     "baseUrl": "./",
+    "types": ["node", "next", "react", "react-dom"],
+    "typeRoots": ["./node_modules/@types", "./src/types"],
     "paths": {
       "@/*": ["./src/*"],
       "@/components/*": ["./src/components/*"],
