--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "lint": "eslint --fix ."
   },
   "dependencies": {
+    "@vercel/og": "^0.6.8",
     "microcms-js-sdk": "^3.2.0",
     "next": "15.3.1",
     "next-sitemap": "^4.2.3",
