--- a/data/players/unknown.json
+++ b/data/players/unknown.json
@@ -178,5 +178,40 @@
     "lastName": "久保",
     "firstName": "晴華",
     "team": "ナガセケンコー"
+  },
+  "松尾_航希_嬉野": {
+    "lastName": "松尾",
+    "firstName": "航希",
+    "team": "嬉野高等学校"
+  },
+  "福田_喜大_上宮": {
+    "lastName": "福田",
+    "firstName": "喜大",
+    "team": "上宮高校"
+  },
+  "南_龍之介_三重": {
+    "lastName": "南",
+    "firstName": "龍之介",
+    "team": "三重高校"
+  },
+  "竹内_慶悟_三重": {
+    "lastName": "竹内",
+    "firstName": "慶悟",
+    "team": "三重高校"
+  },
+  "五十嵐_奨真_とわの森三愛": {
+    "lastName": "五十嵐",
+    "firstName": "奨真",
+    "team": "とわの森三愛高校"
+  },
+  "堺_瑠音_岡山理大附属": {
+    "lastName": "堺",
+    "firstName": "瑠音",
+    "team": "岡山理大附属高校"
+  },
+  "田中_涼介_都城商": {
+    "lastName": "田中",
+    "firstName": "涼介",
+    "team": "都城商業高校"
   }
 }
