Refactor code structure for improved readability and maintainability

--- a/data/players/unknown.json
+++ b/data/players/unknown.json
@@ -213,5 +213,70 @@
     "lastName": "田中",
     "firstName": "涼介",
     "team": "都城商業高校"
+  },
+  "荻谷_侑磨_高田商": {
+    "lastName": "荻谷",
+    "firstName": "侑磨",
+    "team": "高田商業高校"
+  },
+  "千田_夏輝_東北": {
+    "lastName": "千田",
+    "firstName": "夏輝",
+    "team": "東北高校"
+  },
+  "白井_颯_東北": {
+    "lastName": "白井",
+    "firstName": "颯",
+    "team": "東北高校"
+  },
+  "手塚_康介_木更津総合": {
+    "lastName": "手塚",
+    "firstName": "康介",
+    "team": "木更津総合"
+  },
+  "竹之内_琉汰_木更津総合": {
+    "lastName": "竹之内",
+    "firstName": "琉汰",
+    "team": "木更津総合"
+  },
+  "岩田_悠聖_市尼崎": {
+    "lastName": "岩田",
+    "firstName": "悠聖",
+    "team": "市尼崎"
+  },
+  "栗岡_優志_市尼崎": {
+    "lastName": "栗岡",
+    "firstName": "優志",
+    "team": "市尼崎"
+  },
+  "佐々木_柊羽_一関学院": {
+    "lastName": "佐々木",
+    "firstName": "柊羽",
+    "team": "一関学院"
+  },
+  "山内_蒼良_一関学院": {
+    "lastName": "山内",
+    "firstName": "蒼良",
+    "team": "一関学院"
+  },
+  "吉松_要琉生_中京": {
+    "lastName": "吉松",
+    "firstName": "要琉生",
+    "team": "中京"
+  },
+  "秋山_想太_中京": {
+    "lastName": "秋山",
+    "firstName": "想太",
+    "team": "中京"
+  },
+  "柴田_海音_享栄": {
+    "lastName": "柴田",
+    "firstName": "海音",
+    "team": "享栄"
+  },
+  "百武_駿_享栄": {
+    "lastName": "百武",
+    "firstName": "駿",
+    "team": "享栄"
   }
 }
