Add team prefecture mapping and update initial player data
- Introduced a comprehensive mapping of teams to their respective prefectures in `teamData.js`.
- Adjusted the height of the JSON output textarea in `index.html` for better usability.
- Updated `initialPlayer.js` with new player entries, including detailed information for each player and their teams.

--- a/data/players/unknown.json
+++ b/data/players/unknown.json
@@ -182,7 +182,7 @@
   "松尾_航希_嬉野": {
     "lastName": "松尾",
     "firstName": "航希",
-    "team": "嬉野高等学校"
+    "team": "嬉野高校"
   },
   "福田_喜大_上宮": {
     "lastName": "福田",
@@ -207,7 +207,7 @@
   "堺_瑠音_岡山理大附属": {
     "lastName": "堺",
     "firstName": "瑠音",
-    "team": "岡山理大附属高校"
+    "team": "岡山理科大学附属高校"
   },
   "田中_涼介_都城商": {
     "lastName": "田中",
@@ -217,7 +217,7 @@
   "荻谷_侑磨_高田商": {
     "lastName": "荻谷",
     "firstName": "侑磨",
-    "team": "高田商業高校"
+    "team": "都城商業高校"
   },
   "千田_夏輝_東北": {
     "lastName": "千田",
@@ -232,51 +232,66 @@
   "手塚_康介_木更津総合": {
     "lastName": "手塚",
     "firstName": "康介",
-    "team": "木更津総合"
+    "team": "木更津総合高校"
   },
   "竹之内_琉汰_木更津総合": {
     "lastName": "竹之内",
     "firstName": "琉汰",
-    "team": "木更津総合"
+    "team": "木更津総合高校"
   },
   "岩田_悠聖_市尼崎": {
     "lastName": "岩田",
     "firstName": "悠聖",
-    "team": "市尼崎"
+    "team": "尼崎市立尼崎高校"
   },
   "栗岡_優志_市尼崎": {
     "lastName": "栗岡",
     "firstName": "優志",
-    "team": "市尼崎"
+    "team": "尼崎市立尼崎高校"
   },
   "佐々木_柊羽_一関学院": {
     "lastName": "佐々木",
     "firstName": "柊羽",
-    "team": "一関学院"
+    "team": "一関学院高校"
   },
   "山内_蒼良_一関学院": {
     "lastName": "山内",
     "firstName": "蒼良",
-    "team": "一関学院"
+    "team": "一関学院高校"
   },
   "吉松_要琉生_中京": {
     "lastName": "吉松",
     "firstName": "要琉生",
-    "team": "中京"
+    "team": "中京高校"
   },
   "秋山_想太_中京": {
     "lastName": "秋山",
     "firstName": "想太",
-    "team": "中京"
+    "team": "中京高校"
   },
   "柴田_海音_享栄": {
     "lastName": "柴田",
     "firstName": "海音",
-    "team": "享栄"
+    "team": "享栄高校"
   },
   "百武_駿_享栄": {
     "lastName": "百武",
     "firstName": "駿",
-    "team": "享栄"
-  }
+    "team": "享栄高校"
+  },
+  "川﨑_康平_都城商": { "lastName": "川﨑", "firstName": "康平", "team": "都城商業高校" },
+  "森_良輔_都城商": { "lastName": "森", "firstName": "良輔", "team": "都城商業高校" },
+  "一ノ宮_大和_霞ヶ浦": { "lastName": "一ノ宮", "firstName": "大和", "team": "霞ヶ浦高校" },
+  "善福_留生_霞ヶ浦": { "lastName": "善福", "firstName": "留生", "team": "霞ヶ浦高校" },
+  "松田_拳弥_東北": { "lastName": "松田", "firstName": "拳弥", "team": "東北高校" },
+  "水木_洸_東北": { "lastName": "水木", "firstName": "洸", "team": "東北高校" },
+  "結城_琉衣_高田商": { "lastName": "結城", "firstName": "琉衣", "team": "高田商業高校" },
+  "坂口_生磨_尽誠学園": { "lastName": "坂口", "firstName": "生磨", "team": "尽誠学園高校" },
+  "小山_寛晴_尽誠学園": { "lastName": "小山", "firstName": "寛晴", "team": "尽誠学園高校" },
+  "丹羽_奏人_岡崎城西": { "lastName": "丹羽", "firstName": "奏人", "team": "岡崎城西高校" },
+  "香山_侑月_岡崎城西": { "lastName": "香山", "firstName": "侑月", "team": "岡崎城西高校" },
+  "國松_樹人_東北": { "lastName": "國松", "firstName": "樹人", "team": "東北高校" },
+  "齋藤_玲壱_東北": { "lastName": "齋藤", "firstName": "玲壱", "team": "東北高校" },
+  "吉田_拓翔_田村": { "lastName": "吉田", "firstName": "拓翔", "team": "田村高校" },
+  "相山_昂慧_田村": { "lastName": "相山", "firstName": "昂慧", "team": "田村高校" }
 }
