--- a/data/players/unknown.json
+++ b/data/players/unknown.json
@@ -1,297 +1,73 @@
 {
-  "mizobata-ryoji": {
-    "firstName": "亮二",
-    "lastName": "溝端",
-    "team": "ふれあいクラブ"
-  },
-  "sakamoto-ryo": {
-    "firstName": "崚",
-    "lastName": "阪本",
-    "team": "ワタキューセイモア"
-  },
-  "funemizu-yuta": {
-    "firstName": "雄太",
-    "lastName": "船水",
-    "team": "AAS Management"
-  },
-  "murakami-yuto": {
-    "firstName": "雄人",
-    "lastName": "村上",
-    "team": "NTT西日本"
-  },
-  "nakmoto-keya": {
-    "firstName": "圭哉",
-    "lastName": "中本",
-    "team": "福井県庁"
-  },
-  "suzuki-takumi": {
-    "firstName": "鈴木",
-    "lastName": "琢巳",
-    "team": "福井県庁"
-  },
-  "hayashi-yutaro": {
-    "firstName": "佑太郎",
-    "lastName": "林",
-    "team": "NTT西日本"
-  },
-  "nakagawa-harutomo": {
-    "firstName": "晴智",
-    "lastName": "仲川",
-    "team": "東邦ガス"
-  },
-  "otomo-syun": {
-    "firstName": "駿",
-    "lastName": "大友",
-    "team": "東邦ガス"
-  },
-  "kawasaki-koki": {
-    "firstName": "浩希",
-    "lastName": "川﨑",
-    "team": "ワタキューセイモア"
-  },
-  "hoshino-yuji": {
-    "firstName": "雄慈",
-    "lastName": "星野",
-    "team": "ワタキューセイモア"
-  },
-  "kunimatsu-takahiro": {
-    "firstName": "貴洋",
-    "lastName": "國松",
-    "team": "アキム"
-  },
-  "fukuda-narumi": {
-    "firstName": "成海",
-    "lastName": "福田",
-    "team": "アキム"
-  },
-  "araki-shun": {
-    "firstName": "駿",
-    "lastName": "荒木",
-    "team": "早稲田大学"
-  },
-  "takeda-ryo": {
-    "firstName": "凌",
-    "lastName": "竹田",
-    "team": "日本体育大学"
-  },
-  "masuda-yogoro": {
-    "firstName": "洋五豊",
-    "lastName": "増田",
-    "team": "日本体育大学"
-  },
-  "kikuyama-taiyo": {
-    "firstName": "太陽",
-    "lastName": "菊山",
-    "team": "法政大学"
-  },
-  "yamamoto-takahiro": {
-    "firstName": "貴大",
-    "lastName": "山本",
-    "team": "ワタキューセイモア"
-  },
-  "hanayama-raan": {
-    "firstName": "羅行",
-    "lastName": "端山",
-    "team": "早稲田大学"
-  },
-  "matsumoto-yoshifumi": {
-    "firstName": "佳史",
-    "lastName": "松本",
-    "team": "川口市役所"
-  },
-  "sugano-sose": {
-    "firstName": "創世",
-    "lastName": "菅野",
-    "team": "川口市役所"
-  },
-  "saito-shoichi": {
-    "firstName": "翔一",
-    "lastName": "齋藤",
-    "team": "日本信号"
-  },
-  "sato-yamato": {
-    "firstName": "大和",
-    "lastName": "佐藤",
-    "team": "アキム"
-  },
-  "ikeguchi-tokimasa": {
-    "firstName": "季将",
-    "lastName": "池口",
-    "team": "明治大学"
-  },
-  "sibata-shohei": {
-    "firstName": "章平",
-    "lastName": "柴田",
-    "team": "ヨネックスクラブ"
-  },
-  "tenma-rena": {
-    "lastName": "天間",
-    "firstName": "麗奈",
-    "team": "東北高校"
-  },
-  "yoshida-reina": {
-    "lastName": "吉田",
-    "firstName": "澪奈",
-    "team": "ヨネックス"
-  },
-  "sakamoto-shuha": {
-    "lastName": "坂本",
-    "firstName": "朱羽",
-    "team": "どんぐり北広島"
-  },
-  "nakao-hikoto": {
-    "lastName": "中尾",
-    "firstName": "彦斗",
-    "team": "中央大学"
-  },
-  "maeda-rio": {
-    "lastName": "前田",
-    "firstName": "梨緒",
-    "team": "明治大学"
-  },
-  "nakatani-sakura": {
-    "lastName": "中谷",
-    "firstName": "さくら",
-    "team": "明治大学"
-  },
-  "hasegawa-yuka": {
-    "lastName": "長谷川",
-    "firstName": "憂華",
-    "team": "ワタキューセイモア"
-  },
-  "ikeguchi-kisyo": {
-    "lastName": "池口",
-    "firstName": "季将",
-    "team": "ワタキューセイモア"
-  },
-  "kawasaki-hiroki": {
-    "lastName": "川﨑",
-    "firstName": "浩希",
-    "team": "ワタキューセイモア"
-  },
-  "miyamae-kiho": {
-    "lastName": "宮前",
-    "firstName": "希帆",
-    "team": "ワタキューセイモア"
-  },
-  "kubo-haruka": {
-    "lastName": "久保",
-    "firstName": "晴華",
-    "team": "ナガセケンコー"
-  },
-  "松尾_航希_嬉野": {
-    "lastName": "松尾",
-    "firstName": "航希",
-    "team": "嬉野高校"
-  },
-  "福田_喜大_上宮": {
-    "lastName": "福田",
-    "firstName": "喜大",
-    "team": "上宮高校"
-  },
-  "南_龍之介_三重": {
-    "lastName": "南",
-    "firstName": "龍之介",
-    "team": "三重高校"
-  },
-  "竹内_慶悟_三重": {
-    "lastName": "竹内",
-    "firstName": "慶悟",
-    "team": "三重高校"
-  },
-  "五十嵐_奨真_とわの森三愛": {
-    "lastName": "五十嵐",
-    "firstName": "奨真",
-    "team": "とわの森三愛高校"
-  },
-  "堺_瑠音_岡山理大附属": {
-    "lastName": "堺",
-    "firstName": "瑠音",
-    "team": "岡山理科大学附属高校"
-  },
-  "田中_涼介_都城商": {
-    "lastName": "田中",
-    "firstName": "涼介",
-    "team": "都城商業高校"
-  },
-  "荻谷_侑磨_高田商": {
-    "lastName": "荻谷",
-    "firstName": "侑磨",
-    "team": "都城商業高校"
-  },
-  "千田_夏輝_東北": {
-    "lastName": "千田",
-    "firstName": "夏輝",
-    "team": "東北高校"
-  },
-  "白井_颯_東北": {
-    "lastName": "白井",
-    "firstName": "颯",
-    "team": "東北高校"
-  },
-  "手塚_康介_木更津総合": {
-    "lastName": "手塚",
-    "firstName": "康介",
-    "team": "木更津総合高校"
-  },
-  "竹之内_琉汰_木更津総合": {
-    "lastName": "竹之内",
-    "firstName": "琉汰",
-    "team": "木更津総合高校"
-  },
-  "岩田_悠聖_市尼崎": {
-    "lastName": "岩田",
-    "firstName": "悠聖",
-    "team": "尼崎市立尼崎高校"
-  },
-  "栗岡_優志_市尼崎": {
-    "lastName": "栗岡",
-    "firstName": "優志",
-    "team": "尼崎市立尼崎高校"
-  },
-  "佐々木_柊羽_一関学院": {
-    "lastName": "佐々木",
-    "firstName": "柊羽",
-    "team": "一関学院高校"
-  },
-  "山内_蒼良_一関学院": {
-    "lastName": "山内",
-    "firstName": "蒼良",
-    "team": "一関学院高校"
-  },
-  "吉松_要琉生_中京": {
-    "lastName": "吉松",
-    "firstName": "要琉生",
-    "team": "中京高校"
-  },
-  "秋山_想太_中京": {
-    "lastName": "秋山",
-    "firstName": "想太",
-    "team": "中京高校"
-  },
-  "柴田_海音_享栄": {
-    "lastName": "柴田",
-    "firstName": "海音",
-    "team": "享栄高校"
-  },
-  "百武_駿_享栄": {
-    "lastName": "百武",
-    "firstName": "駿",
-    "team": "享栄高校"
-  },
-  "川﨑_康平_都城商": { "lastName": "川﨑", "firstName": "康平", "team": "都城商業高校" },
-  "森_良輔_都城商": { "lastName": "森", "firstName": "良輔", "team": "都城商業高校" },
-  "一ノ宮_大和_霞ヶ浦": { "lastName": "一ノ宮", "firstName": "大和", "team": "霞ヶ浦高校" },
-  "善福_留生_霞ヶ浦": { "lastName": "善福", "firstName": "留生", "team": "霞ヶ浦高校" },
-  "松田_拳弥_東北": { "lastName": "松田", "firstName": "拳弥", "team": "東北高校" },
-  "水木_洸_東北": { "lastName": "水木", "firstName": "洸", "team": "東北高校" },
-  "結城_琉衣_高田商": { "lastName": "結城", "firstName": "琉衣", "team": "高田商業高校" },
-  "坂口_生磨_尽誠学園": { "lastName": "坂口", "firstName": "生磨", "team": "尽誠学園高校" },
-  "小山_寛晴_尽誠学園": { "lastName": "小山", "firstName": "寛晴", "team": "尽誠学園高校" },
-  "丹羽_奏人_岡崎城西": { "lastName": "丹羽", "firstName": "奏人", "team": "岡崎城西高校" },
-  "香山_侑月_岡崎城西": { "lastName": "香山", "firstName": "侑月", "team": "岡崎城西高校" },
-  "國松_樹人_東北": { "lastName": "國松", "firstName": "樹人", "team": "東北高校" },
-  "齋藤_玲壱_東北": { "lastName": "齋藤", "firstName": "玲壱", "team": "東北高校" },
-  "吉田_拓翔_田村": { "lastName": "吉田", "firstName": "拓翔", "team": "田村高校" },
-  "相山_昂慧_田村": { "lastName": "相山", "firstName": "昂慧", "team": "田村高校" }
+  "mizobata-ryoji": {"lastName":"溝端","firstName":"亮二","team":"ふれあいクラブ","displayTeam":"ふれあいクラブ"},
+  "sakamoto-ryo": {"lastName":"阪本","firstName":"崚","team":"ワタキューセイモア","displayTeam":"ワタキューセイモア"},
+  "funemizu-yuta": {"lastName":"船水","firstName":"雄太","team":"AAS Management","displayTeam":"AAS Management"},
+  "murakami-yuto": {"lastName":"村上","firstName":"雄人","team":"NTT西日本","displayTeam":"NTT西日本"},
+  "nakmoto-keya": {"lastName":"中本","firstName":"圭哉","team":"福井県庁","displayTeam":"福井県庁"},
+  "suzuki-takumi": {"lastName":"琢巳","firstName":"鈴木","team":"福井県庁","displayTeam":"福井県庁"},
+  "hayashi-yutaro": {"lastName":"林","firstName":"佑太郎","team":"NTT西日本","displayTeam":"NTT西日本"},
+  "nakagawa-harutomo": {"lastName":"仲川","firstName":"晴智","team":"東邦ガス","displayTeam":"東邦ガス"},
+  "otomo-syun": {"lastName":"大友","firstName":"駿","team":"東邦ガス","displayTeam":"東邦ガス"},
+  "kawasaki-koki": {"lastName":"川﨑","firstName":"浩希","team":"ワタキューセイモア","displayTeam":"ワタキューセイモア"},
+  "hoshino-yuji": {"lastName":"星野","firstName":"雄慈","team":"ワタキューセイモア","displayTeam":"ワタキューセイモア"},
+  "kunimatsu-takahiro": {"lastName":"國松","firstName":"貴洋","team":"アキム","displayTeam":"アキム"},
+  "fukuda-narumi": {"lastName":"福田","firstName":"成海","team":"アキム","displayTeam":"アキム"},
+  "araki-shun": {"lastName":"荒木","firstName":"駿","team":"早稲田大学","displayTeam":"早稲田大学"},
+  "takeda-ryo": {"lastName":"竹田","firstName":"凌","team":"日本体育大学","displayTeam":"日本体育大学"},
+  "masuda-yogoro": {"lastName":"増田","firstName":"洋五豊","team":"日本体育大学","displayTeam":"日本体育大学"},
+  "kikuyama-taiyo": {"lastName":"菊山","firstName":"太陽","team":"法政大学","displayTeam":"法政大学"},
+  "yamamoto-takahiro": {"lastName":"山本","firstName":"貴大","team":"ワタキューセイモア","displayTeam":"ワタキューセイモア"},
+  "hanayama-raan": {"lastName":"端山","firstName":"羅行","team":"早稲田大学","displayTeam":"早稲田大学"},
+  "matsumoto-yoshifumi": {"lastName":"松本","firstName":"佳史","team":"川口市役所","displayTeam":"川口市役所"},
+  "sugano-sose": {"lastName":"菅野","firstName":"創世","team":"川口市役所","displayTeam":"川口市役所"},
+  "saito-shoichi": {"lastName":"齋藤","firstName":"翔一","team":"日本信号","displayTeam":"日本信号"},
+  "sato-yamato": {"lastName":"佐藤","firstName":"大和","team":"アキム","displayTeam":"アキム"},
+  "ikeguchi-tokimasa": {"lastName":"池口","firstName":"季将","team":"明治大学","displayTeam":"明治大学"},
+  "sibata-shohei": {"lastName":"柴田","firstName":"章平","team":"ヨネックスクラブ","displayTeam":"ヨネックスクラブ"},
+  "tenma-rena": {"lastName":"天間","firstName":"麗奈","team":"東北高校","displayTeam":"東北高校"},
+  "yoshida-reina": {"lastName":"吉田","firstName":"澪奈","team":"ヨネックス","displayTeam":"ヨネックス"},
+  "sakamoto-shuha": {"lastName":"坂本","firstName":"朱羽","team":"どんぐり北広島","displayTeam":"どんぐり北広島"},
+  "nakao-hikoto": {"lastName":"中尾","firstName":"彦斗","team":"中央大学","displayTeam":"中央大学"},
+  "maeda-rio": {"lastName":"前田","firstName":"梨緒","team":"明治大学","displayTeam":"明治大学"},
+  "nakatani-sakura": {"lastName":"中谷","firstName":"さくら","team":"明治大学","displayTeam":"明治大学"},
+  "hasegawa-yuka": {"lastName":"長谷川","firstName":"憂華","team":"ワタキューセイモア","displayTeam":"ワタキューセイモア"},
+  "ikeguchi-kisyo": {"lastName":"池口","firstName":"季将","team":"ワタキューセイモア","displayTeam":"ワタキューセイモア"},
+  "kawasaki-hiroki": {"lastName":"川﨑","firstName":"浩希","team":"ワタキューセイモア","displayTeam":"ワタキューセイモア"},
+  "miyamae-kiho": {"lastName":"宮前","firstName":"希帆","team":"ワタキューセイモア","displayTeam":"ワタキューセイモア"},
+  "kubo-haruka": {"lastName":"久保","firstName":"晴華","team":"ナガセケンコー","displayTeam":"ナガセケンコー"},
+  "松尾_航希_嬉野": {"lastName":"松尾","firstName":"航希","team":"嬉野","displayTeam":"嬉野高校"},
+  "福田_喜大_上宮": {"lastName":"福田","firstName":"喜大","team":"上宮","displayTeam":"上宮高校"},
+  "南_龍之介_三重": {"lastName":"南","firstName":"龍之介","team":"三重","displayTeam":"三重高校"},
+  "竹内_慶悟_三重": {"lastName":"竹内","firstName":"慶悟","team":"三重","displayTeam":"三重高校"},
+  "五十嵐_奨真_とわの森三愛": {"lastName":"五十嵐","firstName":"奨真","team":"とわの森三愛","displayTeam":"とわの森三愛高校"},
+  "堺_瑠音_岡山理大附属": {"lastName":"堺","firstName":"瑠音","team":"岡山理大附属","displayTeam":"岡山理科大学附属高校"},
+  "田中_涼介_都城商": {"lastName":"田中","firstName":"涼介","team":"都城商","displayTeam":"都城商業高校"},
+  "荻谷_侑磨_高田商": {"lastName":"荻谷","firstName":"侑磨","team":"高田商","displayTeam":"都城商業高校"},
+  "千田_夏輝_東北": {"lastName":"千田","firstName":"夏輝","team":"東北","displayTeam":"東北高校"},
+  "白井_颯_東北": {"lastName":"白井","firstName":"颯","team":"東北","displayTeam":"東北高校"},
+  "手塚_康介_木更津総合": {"lastName":"手塚","firstName":"康介","team":"木更津総合","displayTeam":"木更津総合高校"},
+  "竹之内_琉汰_木更津総合": {"lastName":"竹之内","firstName":"琉汰","team":"木更津総合","displayTeam":"木更津総合高校"},
+  "岩田_悠聖_市尼崎": {"lastName":"岩田","firstName":"悠聖","team":"市尼崎","displayTeam":"尼崎市立尼崎高校"},
+  "栗岡_優志_市尼崎": {"lastName":"栗岡","firstName":"優志","team":"市尼崎","displayTeam":"尼崎市立尼崎高校"},
+  "佐々木_柊羽_一関学院": {"lastName":"佐々木","firstName":"柊羽","team":"一関学院","displayTeam":"一関学院高校"},
+  "山内_蒼良_一関学院": {"lastName":"山内","firstName":"蒼良","team":"一関学院","displayTeam":"一関学院高校"},
+  "吉松_要琉生_中京": {"lastName":"吉松","firstName":"要琉生","team":"中京","displayTeam":"中京高校"},
+  "秋山_想太_中京": {"lastName":"秋山","firstName":"想太","team":"中京","displayTeam":"中京高校"},
+  "柴田_海音_享栄": {"lastName":"柴田","firstName":"海音","team":"享栄","displayTeam":"享栄高校"},
+  "百武_駿_享栄": {"lastName":"百武","firstName":"駿","team":"享栄","displayTeam":"享栄高校"},
+  "川﨑_康平_都城商": {"lastName":"川﨑","firstName":"康平","team":"都城商","displayTeam":"都城商業高校"},
+  "森_良輔_都城商": {"lastName":"森","firstName":"良輔","team":"都城商","displayTeam":"都城商業高校"},
+  "一ノ宮_大和_霞ヶ浦": {"lastName":"一ノ宮","firstName":"大和","team":"霞ヶ浦","displayTeam":"霞ヶ浦高校"},
+  "善福_留生_霞ヶ浦": {"lastName":"善福","firstName":"留生","team":"霞ヶ浦","displayTeam":"霞ヶ浦高校"},
+  "松田_拳弥_東北": {"lastName":"松田","firstName":"拳弥","team":"東北","displayTeam":"東北高校"},
+  "水木_洸_東北": {"lastName":"水木","firstName":"洸","team":"東北","displayTeam":"東北高校"},
+  "結城_琉衣_高田商": {"lastName":"結城","firstName":"琉衣","team":"高田商","displayTeam":"高田商業高校"},
+  "坂口_生磨_尽誠学園": {"lastName":"坂口","firstName":"生磨","team":"尽誠学園","displayTeam":"尽誠学園高校"},
+  "小山_寛晴_尽誠学園": {"lastName":"小山","firstName":"寛晴","team":"尽誠学園","displayTeam":"尽誠学園高校"},
+  "丹羽_奏人_岡崎城西": {"lastName":"丹羽","firstName":"奏人","team":"岡崎城西","displayTeam":"岡崎城西高校"},
+  "香山_侑月_岡崎城西": {"lastName":"香山","firstName":"侑月","team":"岡崎城西","displayTeam":"岡崎城西高校"},
+  "國松_樹人_東北": {"lastName":"國松","firstName":"樹人","team":"東北","displayTeam":"東北高校"},
+  "齋藤_玲壱_東北": {"lastName":"齋藤","firstName":"玲壱","team":"東北","displayTeam":"東北高校"},
+  "吉田_拓翔_田村": {"lastName":"吉田","firstName":"拓翔","team":"田村","displayTeam":"田村高校"},
+  "相山_昂慧_田村": {"lastName":"相山","firstName":"昂慧","team":"田村","displayTeam":"田村高校"}
 }
