Fix team name for player 堺_瑠音 in players data

--- a/data/players/unknown.json
+++ b/data/players/unknown.json
@@ -40,7 +40,7 @@
   "南_龍之介_三重": {"lastName":"南","firstName":"龍之介","team":"三重","displayTeam":"三重高校"},
   "竹内_慶悟_三重": {"lastName":"竹内","firstName":"慶悟","team":"三重","displayTeam":"三重高校"},
   "五十嵐_奨真_とわの森三愛": {"lastName":"五十嵐","firstName":"奨真","team":"とわの森三愛","displayTeam":"とわの森三愛高校"},
-  "堺_瑠音_岡山理大附属": {"lastName":"堺","firstName":"瑠音","team":"岡山理大附属","displayTeam":"岡山理科大学附属高校"},
+  "堺_瑠音_岡山理大附": {"lastName":"堺","firstName":"瑠音","team":"岡山理大附","displayTeam":"岡山理科大学附属高校"},
   "田中_涼介_都城商": {"lastName":"田中","firstName":"涼介","team":"都城商","displayTeam":"都城商業高校"},
   "荻谷_侑磨_高田商": {"lastName":"荻谷","firstName":"侑磨","team":"高田商","displayTeam":"都城商業高校"},
   "千田_夏輝_東北": {"lastName":"千田","firstName":"夏輝","team":"東北","displayTeam":"東北高校"},
