feat: Add summary generation script for high school tournament results
- Implemented a script to summarize tournament results by prefecture and category.
- Added functionality to read results, teams, and prefecture data from JSON files.
- Created a ranking system for tournament results with a defined order.
- Extracted and stored the best results for each team by category.
- Included player IDs in the summary output.
- Sorted the final summary by prefecture and category before saving to a JSON file.

--- a/data/players/unknown.json
+++ b/data/players/unknown.json
@@ -35,6 +35,7 @@
   "kawasaki-hiroki": {"lastName":"川﨑","firstName":"浩希","team":"ワタキューセイモア","displayTeam":"ワタキューセイモア"},
   "miyamae-kiho": {"lastName":"宮前","firstName":"希帆","team":"ワタキューセイモア","displayTeam":"ワタキューセイモア"},
   "kubo-haruka": {"lastName":"久保","firstName":"晴華","team":"ナガセケンコー","displayTeam":"ナガセケンコー"},
+  "植田_璃音_高田商": {"lastName":"植田","firstName":"璃音","team":"高田商","displayTeam":"高田商業高校"},
   "松尾_航希_嬉野": {"lastName":"松尾","firstName":"航希","team":"嬉野","displayTeam":"嬉野高校"},
   "福田_喜大_上宮": {"lastName":"福田","firstName":"喜大","team":"上宮","displayTeam":"上宮高校"},
   "南_龍之介_三重": {"lastName":"南","firstName":"龍之介","team":"三重","displayTeam":"三重高校"},
