Add new player entries for various high schools and update tournament results formatting

--- a/data/players/unknown.json
+++ b/data/players/unknown.json
@@ -82,5 +82,17 @@
   "塚本_星弥_岡崎城西": {"lastName": "塚本", "firstName": "星弥", "team": "岡崎城西"},
   "五島_飛星空_岡崎城西": {"lastName": "五島", "firstName": "飛星空", "team": "岡崎城西"},
   "内田_陽斗_尽誠学園": {"lastName": "内田", "firstName": "陽斗", "team": "尽誠学園"},
-  "宮田_成将_尽誠学園": {"lastName": "宮田", "firstName": "成将", "team": "尽誠学園"}
+  "菊山_太陽_高田商": {"lastName": "菊山", "firstName": "太陽", "team": "高田商"},
+  "野口_快_高田商": {"lastName": "野口", "firstName": "快", "team": "高田商"},
+  "渡部_海友_岡崎城西": {"lastName": "渡部", "firstName": "海友", "team": "岡崎城西"},
+  "中川_雄太_尽誠学園": {"lastName": "中川", "firstName": "雄太", "team": "尽誠学園"},
+  "宮田_智友_尽誠学園": {"lastName": "宮田", "firstName": "智友", "team": "尽誠学園"},
+  "木内_陸人_上宮": {"lastName": "木内", "firstName": "陸人", "team": "上宮"},
+  "清水_駿_上宮": {"lastName": "清水", "firstName": "駿", "team": "上宮"},
+  "佐藤_奨吾_とわの森三愛": {"lastName": "佐藤", "firstName": "奨吾", "team": "とわの森三愛"},
+  "岡田_侑也_とわの森三愛": {"lastName": "岡田", "firstName": "侑也", "team": "とわの森三愛"},
+  "宮本_颯人_尽誠学園": {"lastName": "宮本", "firstName": "颯人", "team": "尽誠学園"},
+  "黒坂_卓矢_尽誠学園": {"lastName": "黒坂", "firstName": "卓矢", "team": "尽誠学園"},
+  "西宮_想心_東北": {"lastName": "西宮", "firstName": "想心", "team": "東北"},
+  "高橋_拓己_東北": {"lastName": "高橋", "firstName": "拓己", "team": "東北"}
 }
