Add player entry for 宮田 成将 from 尽誠学園

--- a/data/players/unknown.json
+++ b/data/players/unknown.json
@@ -82,6 +82,7 @@
   "塚本_星弥_岡崎城西": {"lastName": "塚本", "firstName": "星弥", "team": "岡崎城西"},
   "五島_飛星空_岡崎城西": {"lastName": "五島", "firstName": "飛星空", "team": "岡崎城西"},
   "内田_陽斗_尽誠学園": {"lastName": "内田", "firstName": "陽斗", "team": "尽誠学園"},
+  "宮田_成将_尽誠学園": {"lastName": "宮田", "firstName": "成将", "team": "尽誠学園"},
   "菊山_太陽_高田商": {"lastName": "菊山", "firstName": "太陽", "team": "高田商"},
   "野口_快_高田商": {"lastName": "野口", "firstName": "快", "team": "高田商"},
   "渡部_海友_岡崎城西": {"lastName": "渡部", "firstName": "海友", "team": "岡崎城西"},
