--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
   "dependencies": {
     "@vercel/analytics": "^1.5.0",
     "@vercel/og": "^0.6.8",
+    "@vercel/speed-insights": "^1.2.0",
     "microcms-js-sdk": "^3.2.0",
     "next": "15.3.1",
     "next-sitemap": "^4.2.3",
