Add meta information for the 西日本ソフトテニス選手権大会 tournament

--- a/data/players/unknown.json
+++ b/data/players/unknown.json
@@ -110,5 +110,14 @@
   "野田_楓麿_高田商": {"lastName": "野田", "firstName": "楓麿", "team": "高田商"},
   "永江_孝二郎_高田商": {"lastName": "永江", "firstName": "孝二郎", "team": "高田商"},
   "武市_大輝_高田商": {"lastName": "武市", "firstName": "大輝", "team": "高田商"},
-  "上通_弘夢_高田商": {"lastName": "上通", "firstName": "弘夢", "team": "高田商"}
+  "上通_弘夢_高田商": {"lastName": "上通", "firstName": "弘夢", "team": "高田商"},
+  "松田_蒼生_東ソー南陽": {"lastName": "松田", "firstName": "蒼", "team": "東ソー南陽"},
+  "兼森_富久斗_東ソー南陽": {"lastName": "兼森", "firstName": "富久斗", "team": "東ソー南陽"},
+  "阪本_崚_ワタキューセイモア": {"lastName": "阪本", "firstName": "崚", "team": "ワタキューセイモア"},
+  "池口_季将_ワタキューセイモア": {"lastName": "池口", "firstName": "季将", "team": "ワタキューセイモア"},
+  "今城_大貴_十八親和銀行": {"lastName": "今城", "firstName": "大貴", "team": "十八親和銀行"},
+  "木原_颯斗_十八親和銀行": {"lastName": "木原", "firstName": "颯斗", "team": "十八親和銀行"},
+  "石井_佑一_ＥＮＥＯＳ": {"lastName": "石井", "firstName": "佑一", "team": "ＥＮＥＯＳ"},
+  "前田_晃良_川崎重工明石": {"lastName": "前田", "firstName": "晃良", "team": "川崎重工明石"},
+  "村上_雄人_NTT西日本": {"lastName": "村上", "firstName": "雄人", "team": "NTT西日本"}
 }
