--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,4 @@ next-env.d.ts
 scripts/dgsks/*
 scripts/pdf/output/softtennis_players_separated.csv
 scripts/pdf/tournament.pdf
+scripts/pdf/output/players.json
