Add initialPlayer.js files to .gitignore to prevent tracking of generated output

--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,5 @@ scripts/dgsks/*
 scripts/pdf/output/softtennis_players_separated.csv
 scripts/pdf/tournament.pdf
 scripts/pdf/output/players.json
+tools/tournament/initialPlayer.js
+tools/tournament2/initialPlayer.js
