Fix page extraction number and remove debug print statements in nation.py
- Changed the page number for extraction from 8 to 1.
- Removed debug print statements that were used for tracking line processing.

--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,4 @@ scripts/pdf/tournament.pdf
 scripts/pdf/output/players.json
 tools/tournament/initialPlayer.js
 tools/tournament2/initialPlayer.js
+scripts/matches/input.json
