Add debug page output file to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,4 @@ scripts/pdf/output/players.json
 tools/tournament/initialPlayer.js
 tools/tournament2/initialPlayer.js
 scripts/matches/input.json
+scripts/pdf/output/debug_page.png
