feat(database): add scripts for database management and testing
- Created README.md for database scripts with setup instructions.
- Implemented add-columns.mjs to add missing columns to the matches table.
- Added SQL script add-round-column.sql for adding round_name column.
- Developed check-db-structure.js to verify the structure of the matches table.
- Created check-db.mjs for checking table structure and sample data.
- Implemented create-test-match.mjs to generate test match data.
- Added supabase-migration.sql for manual SQL execution in Supabase.
- Developed test-db.mjs to test database connection and column existence.
- Created test-round-column.mjs to test the round_name field.
- Added setup-point-system.sh for initial setup and dependency installation.
- Defined TypeScript interfaces for database entities in database.ts.

--- a/package.json
+++ b/package.json
@@ -53,9 +53,11 @@
     "lint": "eslint --fix ."
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.78.0",
     "@vercel/analytics": "^1.5.0",
     "@vercel/og": "^0.6.8",
     "@vercel/speed-insights": "^1.2.0",
+    "dotenv": "^17.2.3",
     "microcms-js-sdk": "^3.2.0",
     "next": "15.3.1",
     "next-sitemap": "^4.2.3",
