--- a/data/tournaments/information/east-japan.json
+++ b/data/tournaments/information/east-japan.json
@@ -6,6 +6,22 @@
     "startDate": "2025-07-19",
     "endDate": "2025-07-20",
     "source": "富山県ソフトテニス連盟",
-    "sourceUrl": "http://www.softtennis-toyama.com/index.php"
+    "sourceUrl": "http://www.softtennis-toyama.com/index.php",
+    "categories": [
+      {
+        "id": "doubles-none-boys",
+        "label": "男子一般",
+        "category": "doubles",
+        "gender": "boys",
+        "age": "none"
+      },
+      {
+        "id": "doubles-none-girls",
+        "label": "女子一般",
+        "category": "doubles",
+        "gender": "girls",
+        "age": "none"
+      }
+    ]
   }
 ]
