--- a/data/tournaments/information/east-japan.json
+++ b/data/tournaments/information/east-japan.json
@@ -9,14 +9,14 @@
     "sourceUrl": "http://www.softtennis-toyama.com/index.php",
     "categories": [
       {
-        "id": "doubles-none-boys",
+        "categoryId": "doubles-none-boys",
         "label": "男子一般",
         "category": "doubles",
         "gender": "boys",
         "age": "none"
       },
       {
-        "id": "doubles-none-girls",
+        "categoryId": "doubles-none-girls",
         "label": "女子一般",
         "category": "doubles",
         "gender": "girls",
